unpackaged/post/08_redu_object_tracking/objects/rio_ed__Session_Connection__c.object
<CustomObject>
	<fields>
        <fullName>rio_ed__Course_Connection__c</fullName>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Session Connections</relationshipLabel>
        <relationshipName>Session_Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rio_ed__Faculty_Confirmed__c</fullName>
        <label>Faculty Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Enrolled</label>
                </value>
		<value>
                    <fullName>Enrollment requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
		<value>
                    <fullName>Waitlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session Connection</label>
    <nameField>
        <label>Session Connection</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>